RESOLVED FIXED266255
Invalid layer contents when navigating and hovering on slack and Facebook.
https://bugs.webkit.org/show_bug.cgi?id=266255
Summary Invalid layer contents when navigating and hovering on slack and Facebook.
Matt Woodrow
Reported 2023-12-11 14:13:02 PST
<rdar://119505126> Sometimes when hovering text entries on slack, the previous highlight isn't fully removed. Likewise, navigating between the profile page and home page on Facebook can leave remnants of the rendering of the previous page.
Attachments
Matt Woodrow
Comment 1 2023-12-11 14:18:13 PST
EWS
Comment 2 2023-12-11 18:08:52 PST
Committed 271908@main (8c21d17d0a02): <https://commits.webkit.org/271908@main> Reviewed commits have been landed. Closing PR #21653 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.