Cherry-pick 8c21d17d0a02. rdar://119505126

Invalid layer contents when navigating and hovering on slack and Facebook.
    https://bugs.webkit.org/show_bug.cgi?id=266255
    <rdar://119505126>

    Reviewed by Mike Wyrzykowski.

    Sometimes when hovering text entries on slack, the previous highlight isn't fully removed.
    Likewise, navigating between the profile page and home page on Facebook can leave remnants
    of the rendering of the previous page.

    The code is resetting the graphics context clip to remove any partial-update clips applied
    from a previous draw into that context. Unfortunately this was happening after the copy
    forward draw, not before. This moves it up, so that we're not clipped to the old draw region.

    It would be nice to add a test here.

    * Source/WebKit/GPUProcess/graphics/RemoteImageBufferSet.cpp:
    (WebKit::RemoteImageBufferSet::prepareBufferForDisplay):

    Canonical link: https://commits.webkit.org/271908@main

Identifier: 271831.7@safari-7618.1.9-branch